Prefer List/Set/Map.of methods where practical
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>